--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -38,5 +38,18 @@
       "matchUpdateTypes": ["digest", "pin", "pinDigest"],
       "automerge": true
     }
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "description": "GitHub URL dependencies",
+      "fileMatch": [".+\\.ya?ml$"],
+      "matchStrings": [
+        "https://github\\.com/(?<depName>[^/]+/[^/]+)//.*?\\?ref=(?<currentValue>\\S+)",
+        "https://raw\\.githubusercontent\\.com/(?<depName>[^/]+/[^/]+)/(?<currentValue>[^/]+)",
+        "https://github\\.com/(?<depName>[^/]+/[^/]+)/releases/download/(?<currentValue>[^/]+)"
+      ],
+      "datasourceTemplate": "github-releases"
+    }
   ]
 }
