ignore go.mod and go.sum spell check

--- a/dev/cspell/cspell.config.yaml
+++ b/dev/cspell/cspell.config.yaml
@@ -10,8 +10,5 @@ ignorePaths:
   - "cspell.config.yaml"
   - "dictionary.txt"
   - ".vscode"
-  - "**/Pipfile"
-  - "**/Pipfile.lock"
-  - "**/*.cfg"
-  - "**/*.conf"
-  - "**/*.j2"
+  - "go.mod"
+  - "go.sum"
