--- a/.vscode/settings-sample.json
+++ b/.vscode/settings-sample.json
@@ -7,5 +7,9 @@
     },
     "custom": true,
     "internal-terms": false
+  },
+  "cSpell.enabledFileTypes": {
+    "go.mod": false,
+    "go.sum": false
   }
 }
