--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,23 +19,15 @@
       "enabled": false
     },
     {
-      "description": "Auto merge devDependencies",
-      "matchDepTypes": ["devDependencies"],
-      "automerge": true
-    },
-    {
-      "description": "Auto merge GitHub Actions",
-      "matchManagers": ["github-actions"],
-      "automerge": true
-    },
-    {
-      "description": "Auto merge up to minor",
-      "matchUpdateTypes": ["minor", "patch"],
-      "automerge": true
-    },
-    {
-      "description": "Auto merge digest & pin",
-      "matchUpdateTypes": ["digest", "pin", "pinDigest"],
+      "description": "Auto merge up to major",
+      "matchUpdateTypes": [
+        "major",
+        "minor",
+        "patch",
+        "digest",
+        "pin",
+        "pinDigest"
+      ],
       "automerge": true
     }
   ],
