--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -41,6 +41,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [generate]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
