--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs:
+      - lint
     steps:
       - name: Checkout
         uses: actions/checkout@v4
