--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -12,10 +12,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: pages
-  cancel-in-progress: false
-
 jobs:
   generate:
     name: Generate
@@ -41,7 +37,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [generate]
+    needs:
+      - generate
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -71,10 +68,14 @@ jobs:
   deploy:
     name: Deploy
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs:
+      - build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
+    concurrency:
+      group: pages
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
