--- a/.vscode/settings-sample.json
+++ b/.vscode/settings-sample.json
@@ -1,15 +1,16 @@
 {
   "cSpell.customDictionaries": {
-    "words": {
-      "name": "dictionary",
-      "path": "${workspaceRoot}/dev/cspell/dictionary.txt",
-      "addWords": true
-    },
     "custom": true,
-    "internal-terms": false
+    "internal-terms": false,
+    "words": {
+      "addWords": true,
+      "name": "dictionary",
+      "path": "${workspaceRoot}/dev/cspell/dictionary.txt"
+    }
   },
   "cSpell.enabledFileTypes": {
     "go.mod": false,
     "go.sum": false
-  }
+  },
+  "go.lintOnSave": "package"
 }
